<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue_purple">

    <include
        layout="@layout/app_bar_act_dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentStart="true"
                        android:src="@mipmap/boy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/iv_profile"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="John doe" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_subscription"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentStart="true"
                            android:src="@mipmap/subscription" />

                        <TextView
                            android:id="@+id/tv_subscription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            android:layout_toRightOf="@+id/iv_subscription"
                            android:text="@string/subscription"
                            android:textColor="#ffffff"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            android:layout_toRightOf="@+id/tv_subscription"
                            android:background="@drawable/rect_curve_yellow"
                            android:paddingLeft="@dimen/dp10"
                            android:paddingRight="@dimen/dp10"
                            android:paddingTop="@dimen/dp5"
                            android:paddingBottom="@dimen/dp5"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:text="@string/health" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_subscription"
                            android:layout_marginLeft="13dp"
                            android:layout_marginTop="@dimen/dp8"
                            android:layout_toRightOf="@+id/iv_subscription"
                            android:textColor="#ffffff"
                            android:textSize="12sp"
                            android:text="Expires on 25th Dec 2020" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_notification"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentStart="true"
                            android:src="@mipmap/notification" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="13dp"
                            android:layout_toRightOf="@+id/iv_notification"
                            android:textColor="#ffffff"
                            android:textSize="16sp"
                            android:text="@string/notification" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/grey" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_help"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentStart="true"
                            android:src="@mipmap/faq" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            android:layout_toRightOf="@+id/iv_help"
                            android:text="@string/help"
                            android:textColor="#ffffff"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_feedback"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentStart="true"
                            android:src="@mipmap/subscription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="13dp"
                            android:layout_toRightOf="@+id/iv_feedback"
                            android:textColor="#ffffff"
                            android:textSize="16sp"
                            android:text="@string/feedback" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/grey" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_settings"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentStart="true"
                            android:src="@mipmap/ic_shop" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            android:layout_toRightOf="@+id/iv_settings"
                            android:text="@string/settings"
                            android:textColor="#ffffff"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_sign_out"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentStart="true"
                            android:src="@drawable/ic_logout" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="13dp"
                            android:layout_toRightOf="@+id/iv_sign_out"
                            android:textColor="#ffffff"
                            android:textSize="16sp"
                            android:text="@string/sign_out" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>