<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/dp60"
        android:layout_height="@dimen/dp5"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="2.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="97dp"
        android:background="@drawable/gradient_blue_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enrique_john"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:gravity="center"
        android:text="@string/week"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:gravity="center"
        android:text="@string/day"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp5"
        android:layout_marginTop="94dp"
        android:background="@drawable/rect_more_curve_yellow"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp5"
        android:layout_marginTop="94dp"
        android:background="@drawable/rect_more_curve_yellow"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_curve_primary1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Most used"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_down_arrow"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/rect_curve_primary1"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view5"
        tools:text="Show categories" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp60"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/rect_curve_primary1"
        android:backgroundTint="@color/grey_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginEnd="12dp"
        android:max="0"
        android:progress="45"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintVertical_bias="0.545" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dp30"
        android:layout_height="@dimen/dp30"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_youtube"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/youtube"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="45m"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7"
        tools:layout_editor_absoluteX="347dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageView2,textView9,progressBar,textView10,view7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="246dp" />

</androidx.constraintlayout.widget.ConstraintLayout>